--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,10 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="verde">#8BC34A</color>
+    <color name="morado">#673AB7</color>
+    <color name="azulClaro">#2196F3</color>
+    <color name="azul">#003f63</color>
+    <color name="gris">#8E8E8E</color>
+    <color name="backgroundGuardar">#322196F3</color>
 </resources>
