--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -2,8 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:id="@+id/cabecera"
         android:layout_width="match_parent"
@@ -40,39 +39,4 @@
             android:layout_height="27dp"
             android:src="@drawable/icon_search"/>
     </LinearLayout>
-    <LinearLayout
-        android:id="@+id/filtrados"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:layout_constraintTop_toBottomOf="@id/cabecera"
-        android:orientation="horizontal"
-        android:gravity="center_vertical"
-        android:paddingBottom="15dp">
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerSedes"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            tools:listitem="@layout/item_sedes"
-            android:layout_marginEnd="20dp"
-            android:layout_marginStart="20dp"
-            />
-        <ImageView
-            android:id="@+id/icon_filter"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:src="@drawable/icon_filter"
-            android:layout_marginEnd="20dp"/>
-    </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/subfragment_home"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/filtrados"
-        app:layout_constraintVertical_bias="1.0"
-        tools:layout_editor_absoluteX="68dp" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
