--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,7 @@
     <color name="azulClaro">#2196F3</color>
     <color name="azul">#003f63</color>
     <color name="gris">#8E8E8E</color>
+    <color name="grisclaro">#E8E8E8</color>
     <color name="backgroundGuardar">#322196F3</color>
+    <color name="background">#66000000</color>
 </resources>
