--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Eventosapp" parent="Theme.Material3.DayNight.NoActionBar">
-
+        
     </style>
 
     <style name="Theme.Eventosapp" parent="Base.Theme.Eventosapp" />
-    
+
+    <style name="CustomSearchViewTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="colorControlNormal">@android:color/transparent</item>
+    </style>
 
     <style name="redondo" parent="">
         <item name="cornerFamily">rounded</item>
