--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,6 @@
     <color name="azul">#003f63</color>
     <color name="gris">#8E8E8E</color>
     <color name="backgroundGuardar">#322196F3</color>
+    <color name="background">#66000000</color>
+    <color name="grisclaro">#F1F1F1</color>
 </resources>
