--- a/app/src/main/res/layout/activity_editar_evento.xml
+++ b/app/src/main/res/layout/activity_editar_evento.xml
@@ -24,7 +24,7 @@
             android:layout_width="match_parent"
             android:layout_height="5dp"
             android:layout_marginTop="5dp"
-            android:background="@color/heart"/>
+            android:background="@color/azul"/>
 
     </LinearLayout>
     <ImageView
