--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -88,7 +88,7 @@
                 android:layout_marginTop="20dp">
 
                 <com.google.android.material.switchmaterial.SwitchMaterial
-                    android:id="@+id/rememberPassword"
+                    android:id="@+id/rememberCuenta"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     app:thumbTint="@color/thumb_tint"
@@ -97,7 +97,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Recordar Contraseña"/>
+                    android:text="Recordar Cuenta"/>
 
             </LinearLayout>
 
