--- a/app/src/main/res/layout/activity_buscar_evento.xml
+++ b/app/src/main/res/layout/activity_buscar_evento.xml
@@ -32,22 +32,12 @@
         android:background="@drawable/buscar_design"
         />
 
-    <LinearLayout
-        android:id="@+id/recyclerContainer"
-        android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search">
-
-
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/recyclerSearch"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_marginTop="60dp"
+            android:layout_marginTop="50dp"
+            android:padding="7dp"
             tools:listitem="@layout/item_eventos" />
 
-    </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
