--- a/app/src/main/res/layout/fragment_guardar.xml
+++ b/app/src/main/res/layout/fragment_guardar.xml
@@ -32,10 +32,12 @@
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:layout_marginEnd="10dp"
+            app:tint="@color/black"
             android:src="@drawable/icon_notification"/>
         <ImageView
             android:id="@+id/icon_buscar"
             android:layout_width="27dp"
+            app:tint="@color/black"
             android:layout_height="27dp"
             android:src="@drawable/icon_search"/>
     </LinearLayout>
