--- a/app/src/main/res/layout/activity_detalle_evento.xml
+++ b/app/src/main/res/layout/activity_detalle_evento.xml
@@ -58,6 +58,7 @@
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:src="@drawable/icon_locacion"
+                    app:tint="@color/black"
                     android:layout_marginEnd="5dp"/>
                 <TextView
                     android:id="@+id/ubicacion"
@@ -73,7 +74,8 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:src="@drawable/icon_calendario"
-                    android:layout_marginEnd="7dp"/>
+                    android:layout_marginEnd="7dp"
+                    app:tint="@color/black"/>
                 <TextView
                     android:id="@+id/fechaHoraInicio"
                     android:layout_width="wrap_content"
@@ -97,7 +99,8 @@
                     android:layout_width="18dp"
                     android:layout_height="18dp"
                     android:src="@drawable/icon_person"
-                    android:layout_marginEnd="7dp"/>
+                    android:layout_marginEnd="7dp"
+                    app:tint="@color/black"/>
                 <TextView
                     android:id="@+id/participantesActuales"
                     android:layout_width="wrap_content"
