--- a/app/src/main/res/layout/fragment_inicio.xml
+++ b/app/src/main/res/layout/fragment_inicio.xml
@@ -28,16 +28,19 @@
             android:textStyle="bold"
             android:textSize="22dp"
             android:textColor="@color/azul"/>
+
         <ImageView
             android:id="@+id/icon_notificacion"
-            android:layout_width="27dp"
+            android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:layout_marginEnd="10dp"
-            android:src="@drawable/icon_notification"/>
+            app:tint="@color/black"
+            android:src="@drawable/icon_notification" />
         <ImageView
             android:id="@+id/icon_buscar"
             android:layout_width="27dp"
             android:layout_height="27dp"
+            app:tint="@color/black"
             android:src="@drawable/icon_search"/>
     </LinearLayout>
     <LinearLayout
@@ -62,6 +65,7 @@
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@drawable/icon_filter"
+            app:tint="@color/black"
             android:layout_marginEnd="20dp"/>
     </LinearLayout>
 
