--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -33,11 +33,13 @@
             android:layout_width="27dp"
             android:layout_height="27dp"
             android:layout_marginEnd="10dp"
+            app:tint="@color/black"
             android:src="@drawable/icon_notification"/>
         <ImageView
             android:id="@+id/icon_buscar"
             android:layout_width="27dp"
             android:layout_height="27dp"
+            app:tint="@color/black"
             android:src="@drawable/icon_search"/>
     </LinearLayout>
 
