--- a/app/src/main/res/layout/item_eventos_formato_peque.xml
+++ b/app/src/main/res/layout/item_eventos_formato_peque.xml
@@ -31,11 +31,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="bottom">
+
             <ImageView
                 android:layout_width="15dp"
-                android:layout_height="15dp"
+                android:layout_height="16dp"
+                android:layout_marginEnd="5dp"
                 android:src="@drawable/icon_calendario"
-                android:layout_marginEnd="5dp"/>
+                app:tint="@color/black"/>
             <TextView
                 android:id="@+id/fechaHora"
                 android:layout_width="wrap_content"
@@ -81,7 +83,8 @@
                 android:layout_width="17dp"
                 android:layout_height="15dp"
                 android:src="@drawable/icon_locacion"
-                android:layout_marginEnd="2dp"/>
+                android:layout_marginEnd="2dp"
+                app:tint="@color/black"/>
             <TextView
                 android:id="@+id/sedeDireccion"
                 android:layout_width="wrap_content"
