--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,7 +1,10 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Eventosapp" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your dark theme here. -->
-        <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
+        <item name="colorPrimary">@color/azul</item>
+        <item name="android:navigationBarColor">@color/oscuro</item>
+        <item name="android:windowBackground">@color/oscuro</item>
+        <item name="android:statusBarColor">@color/oscuro</item>
+        <item name="android:textColor">@android:color/white</item>
     </style>
 </resources>
