--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,14 +1,14 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.Eventosapp" parent="Theme.Material3.DayNight.NoActionBar">
-        
+        <item name="colorPrimary">@color/azul</item>
+        <item name="android:navigationBarColor">@android:color/white</item>
+        <item name="android:windowBackground">@android:color/white</item>
+        <item name="android:statusBarColor">@android:color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
     </style>
 
     <style name="Theme.Eventosapp" parent="Base.Theme.Eventosapp" />
-
-    <style name="CustomSearchViewTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorControlNormal">@android:color/transparent</item>
-    </style>
 
     <style name="redondo" parent="">
         <item name="cornerFamily">rounded</item>
