--- a/app/src/main/res/layout/fragment_guardar.xml
+++ b/app/src/main/res/layout/fragment_guardar.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <LinearLayout
         android:id="@+id/cabecera"
         android:layout_width="match_parent"
@@ -41,4 +42,14 @@
             android:layout_height="27dp"
             android:src="@drawable/icon_search"/>
     </LinearLayout>
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerEventos"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        tools:listitem="@layout/item_eventos"
+        android:layout_marginEnd="20dp"
+        android:layout_marginStart="20dp"
+        app:layout_constraintTop_toBottomOf="@id/cabecera"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
