--- a/app/src/main/res/layout/activity_detalle_evento.xml
+++ b/app/src/main/res/layout/activity_detalle_evento.xml
@@ -26,6 +26,18 @@
         android:background="@drawable/btn_guardar"
         app:tint="@color/azul"
         />
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:padding="7dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:background="@drawable/btn_guardar"
+        android:visibility="gone"
+        android:layout_centerInParent="true"/>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
