animacion de inicio

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -3,7 +3,7 @@
     <color name="black">#FFFFFFFF</color>
     <color name="white">#FF000000</color>
     <color name="backgrounMenu">#18191A</color>
-    <color name="azul">#3F82A8</color>
+    <color name="azul">#356E8E</color>
     <color name="grisclaro">#303030</color>
     <color name="verde">#4CAF50</color>
 </resources>
