--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="morado">#673AB7</color>
     <color name="azulClaro">#2196F3</color>
     <color name="azul">#003f63</color>
+    <color name="backgroundsplashcreen">#003f63</color>
     <color name="gris">#8E8E8E</color>
     <color name="backgroundGuardar">#322196F3</color>
     <color name="background">#66000000</color>
